--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,3 @@
-name: Set execute permission for build.sh
-  run: chmod +x ./build.sh
-  
 name: Build sources
 on:
   push:
@@ -24,6 +21,12 @@ jobs:
     steps:
     -
       uses: actions/checkout@v4
+    -
+      name: Set execute permission for build.sh
+    run: chmod +x ./build.sh
+    -
+      name: Build Source
+    run: ./build.sh
     -
       uses: google/wireit@setup-github-actions-caching/v1
     -
