--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,13 @@ jobs:
     steps:
     -
       uses: actions/checkout@v4
+    - 
+      name: Set execute permission for root build.sh and all build.sh in src/rust/*
+        run: |
+          chmod +x ./build.sh
+          for f in ./src/rust/*/build.sh; do
+            chmod +x "$f"
+          done
     -
       uses: google/wireit@setup-github-actions-caching/v1
     -
