--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,9 +21,9 @@ jobs:
     steps:
     -
       uses: actions/checkout@v4
-    - name: Set execute permission for root build.sh and all build.sh in src/rust/*
+    - 
+      name: Set execute permission for root build.sh and all build.sh in src/rust/*
       run: |
-          chmod +x ./build.sh
           for f in ./src/rust/*/build.sh; do
             chmod +x "$f"
           done
