--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,6 +73,9 @@ jobs:
             ./build.sh -a
           )
         done
+    - name: Make build.sh executable
+      run: |
+    find ./src/rust -name "build.sh" -exec chmod +x {} \;
     -
       name: Building source list
       run: |
