--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -75,7 +75,7 @@ jobs:
         done
     - name: Make build.sh executable
       run: |
-      find ./src/rust -name "build.sh" -exec chmod +x {} \;
+      find ./src/rust/* -name "build.sh" -exec chmod +x {} \;
     -
       name: Building source list
       run: |
