--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,6 +88,7 @@ jobs:
         git-config-email: github-actions[bot]@users.noreply.github.com
         commit-message: Update source list
         single-commit: true
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     - 
       name: Uploading packages as artifact
       uses: actions/upload-artifact@v4
