--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,15 @@
 name: Build sources
 on:
   push:
+    branches:
+    - main
     paths:
     - 'src/**'
     - '.github/workflows/build.yaml'
+
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -14,18 +20,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     -
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     -
       uses: google/wireit@setup-github-actions-caching/v1
-    - 
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: npm
-        cache-dependency-path: '**/package-lock.json'
     -
       name: Cache rust stuff
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
          ~/.cargo/registry/index
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-cargo3-
     -
       name: sccache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/sccache
         key: ${{ runner.os }}-sccache-${{ github.sha }}
@@ -52,7 +52,7 @@ jobs:
     -
       name: Install build dependencies
       env:
-        GH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         sudo ln -s $(which wasm-ld-13 || which wasm-ld-12 || which wasm-ld-11 || which wasm-ld-10) /usr/bin/wasm-ld
         
@@ -64,17 +64,6 @@ jobs:
         curl -L https://github.com/mozilla/sccache/releases/download/v$SCCACHE_VERSION/$SCCACHE_FILE.tar.gz | tar -xz
         sudo mv -f $SCCACHE_FILE/sccache /usr/local/bin/sccache
         sudo chmod +x /usr/local/bin/sccache
-    -
-      name: Build AssemblyScript sources
-      run: |
-        for src in ./src/as/*; do
-          (
-            cd "$src"
-            npm clean-install
-            npm run build
-          ) &
-        done
-        wait
     -
       name: Build Rust sources
       run: |
@@ -90,7 +79,7 @@ jobs:
         aidoku build ./**/*.aix
     -
       name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4.2.5
+      uses: JamesIves/github-pages-deploy-action@v4.7.2
       if: ${{ github.ref == 'refs/heads/main' }}
       with:
         branch: gh-pages
@@ -101,7 +90,7 @@ jobs:
         single-commit: true
     - 
       name: Uploading packages as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: packages
@@ -109,7 +98,7 @@ jobs:
         if-no-files-found: ignore
     -
       name: Uploading gh-pages deployment as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: gh-pages
